<!-- Copyright (C) 2014 John Charles Byrne Distributed under the terms of GPL.  Please leave this notice intact when copying  -->
<LinearLayout style="@style/LinearLayoutStyle" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/LinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:gravity="center_horizontal|center_vertical" >

        <Button android:background="@drawable/button" android:textColor="#FFFFFF"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddCompany" 
            android:onClick="launchAddCompany"/>

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:gravity="center_horizontal|center_vertical" >

        <Button android:background="@drawable/button" android:textColor="#FFFFFF"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ListCompanies" 
            android:onClick="launchListCompanies" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" 
        android:gravity="center_horizontal|center_vertical" >

        <Button android:background="@drawable/button" android:textColor="#FFFFFF"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddPerson" 
            android:onClick="launchEnterPerson" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" 
        android:gravity="center_horizontal|center_vertical" >

        <Button android:background="@drawable/button" android:textColor="#FFFFFF"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ListPeople" 
            android:onClick="listPeople" />

    </LinearLayout>

</LinearLayout>
